[gd_scene load_steps=4 format=3 uid="uid://dry1vljsg1cee"]

[ext_resource type="Script" path="res://Enemy.gd" id="1_opioh"]
[ext_resource type="Texture2D" uid="uid://bh1cvpvueuaer" path="res://Assets/Units/Enemy_Small.png" id="2_8vxnv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y3f72"]
size = Vector2(32, 32)

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 2
script = ExtResource("1_opioh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_8vxnv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_y3f72")

[node name="FloorRay" type="RayCast2D" parent="."]
position = Vector2(16, 0)
target_position = Vector2(0, 22)

[node name="WallRay" type="RayCast2D" parent="."]
target_position = Vector2(20, 0)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_y3f72")

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
